REGRESSION (r266695): Unable to scroll the menu in 北京114预约挂号 official account - WeChat https://bugs.webkit.org/show_bug.cgi?id=221948 <rdar://problem/71661277>

Reviewed by Simon Fraser.

r266695 caused this to regress, but it actually is a progression, because all browsers agree
that this content, as it exists in the app, doesn't scroll. So, we don't want to revert the
change itself, because it's a good change, but we also want to make sure that WeChat continues
to work. So, we can temporarily quirk one particular element in the WeChat app, until the
the content can be fixed (<rdar://problem/74377902>).

Because this is a WeChat-specific quirk, it is untestable. I tested manually.

* page/Quirks.cpp:
(WebCore::Quirks::needsWeChatScrollingQuirk const):
* page/Quirks.h:
* platform/RuntimeApplicationChecks.h:
* platform/cocoa/RuntimeApplicationChecksCocoa.mm:
(WebCore::IOSApplication::isWechat):
* platform/cocoa/VersionChecks.h:
* style/StyleAdjuster.cpp:
(WebCore::Style::Adjuster::adjustForSiteSpecificQuirks const):


Canonical link: https://commits.webkit.org/234180@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272977 268f45cc-cd09-0410-ab3c-d52691b4dbfc